# agomTradePro

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  README_EN.md  backup-script-utf8.ps1  backup-script.ps1  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  coverage-guardrail.xml  coverage-integration.xml  coverage-unit.xml  docker-compose-dev.yml  docker-compose.yml  install.bat  nbs_response.html  package-lock.json  package.json  pyproject.toml  pytest.ini  refresh_macro_data.py  requirements-dev.txt  requirements-prod.txt  requirements.txt  run.bat  run_all_tests.ps1  run_tests.py  schema.yml  skills-lock.json  start-dev.ps1  (+11 more)
.claude/: settings.local.json
apps/: __init__.py
core/: __init__.py  admin.py  admin_log_views.py  api_views.py  api_views_decision_funnel.py  apps.py  asgi.py  cache_utils.py  celery.py  celery_metrics.py  context_processors.py  exception_utils.py  exceptions.py  health_checks.py  log_buffer.py  log_file_paths.py  logging_handlers.py  logging_utils.py  metrics.py  schema.py  security.py  staticfiles.py  throttling.py  urls.py  version.py  views.py  views_decision_funnel.py  wsgi.py
data/: macro_data_latest.json  regime_latest.json  update_summary.json
deploy/: .env.qlib-train.example  .env.vps.example  README_DEPLOY.md
doc/: AgomSAAF_V3.4.md  ai_provider_requirements.md  implementation_tasks.md  project_structure.md  prompt_templates_guide.md  regime.txt
docker/: Caddyfile.template  Dockerfile.prod  Dockerfile.prod.mirror  Dockerfile.qlib-train  docker-compose.qlib-train.yml  docker-compose.vps.yml  entrypoint.prod.sh
docs/: AgomSAAF_V3.4.md  (+36 more)
sdk/: LICENSE  README.md  pyproject.toml
sdk/.mcp/: claude-desktop-config.json
sdk/.mcp/skills/agomsaaf-agent-operator/: SKILL.md
sdk/.mcp/skills/agomsaaf-agent-operator/references/: operation-playbook.md  setup-and-auth.md
sdk/.mcp/skills/agomtradepro-agent-operator/: SKILL.md
sdk/.mcp/skills/agomtradepro-agent-operator/references/: operation-playbook.md  setup-and-auth.md
sdk/agomsaaf/: __init__.py  client.py  config.py  exceptions.py  types.py
sdk/agomsaaf/modules/: __init__.py  account.py  agent_context.py  agent_proposal.py  agent_runtime.py  ai_provider.py  alpha.py  alpha_trigger.py  asset_analysis.py  audit.py  backtest.py  base.py  beta_gate.py  config_center.py  dashboard.py  decision_rhythm.py  decision_workflow.py  equity.py  events.py  factor.py  filter.py  fund.py  hedge.py  macro.py  market_data.py  policy.py  prompt.py  realtime.py  regime.py  rotation.py  sector.py  sentiment.py  signal.py  simulated_trading.py  strategy.py  task_monitor.py
sdk/agomsaaf_mcp/: __init__.py  __main__.py  audit.py  rbac.py  server.py
sdk/agomsaaf_mcp/tools/: __init__.py  account_tools.py  agent_proposal_tools.py  agent_runtime_tools.py  agent_task_tools.py  ai_provider_tools.py  alpha_tools.py  alpha_trigger_tools.py  asset_analysis_tools.py  audit_tools.py  backtest_tools.py  beta_gate_tools.py  config_center_tools.py  dashboard_tools.py  decision_rhythm_tools.py  decision_workflow_tools.py  equity_tools.py  events_tools.py  factor_tools.py  filter_tools.py  fund_tools.py  hedge_tools.py  macro_tools.py  market_data_tools.py  policy_tools.py  prompt_tools.py  realtime_tools.py  regime_tools.py  rotation_tools.py  sector_tools.py  sentiment_tools.py  signal_tools.py  simulated_trading_tools.py  strategy_tools.py  task_monitor_tools.py
sdk/agomtradepro/: __init__.py  client.py  config.py  exceptions.py  types.py
sdk/agomtradepro/modules/: __init__.py  account.py  agent_context.py  agent_proposal.py  agent_runtime.py  ai_provider.py  alpha.py  alpha_trigger.py  asset_analysis.py  audit.py  backtest.py  base.py  beta_gate.py  config_center.py  dashboard.py  data_center.py  decision_rhythm.py  decision_workflow.py  equity.py  events.py  factor.py  filter.py  fund.py  hedge.py  macro.py  market_data.py  policy.py  prompt.py  pulse.py  realtime.py  regime.py  risk_center.py  rotation.py  sector.py  sentiment.py  signal.py  simulated_trading.py  strategy.py  task_monitor.py
sdk/agomtradepro_mcp/: __init__.py  __main__.py  audit.py  rbac.py  server.py
sdk/agomtradepro_mcp/tools/: __init__.py  account_tools.py  agent_proposal_tools.py  agent_runtime_tools.py  agent_task_tools.py  ai_provider_tools.py  alpha_tools.py  alpha_trigger_tools.py  asset_analysis_tools.py  audit_tools.py  backtest_tools.py  beta_gate_tools.py  config_center_tools.py  dashboard_tools.py  data_center_tools.py  decision_rhythm_tools.py  decision_workflow_tools.py  equity_tools.py  events_tools.py  factor_tools.py  filter_tools.py  fund_tools.py  hedge_tools.py  macro_tools.py  market_data_tools.py  policy_tools.py  prompt_tools.py  pulse_tools.py  realtime_tools.py  regime_tools.py  risk_center_tools.py  rotation_tools.py  sector_tools.py  sentiment_tools.py  signal_tools.py  simulated_trading_tools.py  strategy_tools.py  task_monitor_tools.py
sdk/docs/: README.md  api_reference.md  mcp-deployment.md  mcp_guide.md  quickstart.md
sdk/docs/examples/: basic_usage.py  data_analysis.py  equity_fund_analysis.py  simulated_trading.py
sdk/tests/: conftest.py
sdk/tests/test_mcp/: __init__.py  test_account_macro_sizing_tools.py  test_audit.py  test_config_center_tools.py  test_data_center_tools.py  test_fund_tools.py  test_pulse_tools_contract.py  test_rbac.py  test_risk_center_tools.py  test_tool_execution.py  test_tool_registration.py
sdk/tests/test_sdk/: __init__.py  test_account_macro_sizing_module.py  test_account_unified_module.py  test_alpha_module.py  test_backtest_module.py  test_client.py  test_config_center_module.py  test_dashboard_alpha_contract.py  test_data_center_module.py  test_extended_module_endpoints.py  test_extended_modules.py  test_fund_module.py  test_macro_module.py  test_pulse_contracts.py  test_realtime_module.py  test_regime_module.py  test_risk_center_module.py  test_route_alignment_guardrails.py  test_signal_module.py  test_strategy_module.py
(+3167 files in other folders)
