[project]
name = "agomsaaf"
version = "0.1.0"
description = "Agom Strategic Asset Allocation Framework"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0,<6.0",
    "djangorestframework",
    "django-environ",
    "celery[redis,s3]",
    "redis",
    "django-celery-beat",
    "kombu",
    "pandas>=2.0",
    "numpy>=1.24",
    "statsmodels",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "tushare",
    "akshare",
    "drf-spectacular",
    "requests",
    "streamlit>=1.42",
    "plotly>=5.24",
    "prometheus-client>=0.19.0",
    "python-dateutil>=2.8",
    "pytz>=2023.3",
    "typing-extensions>=4.9",
    "RestrictedPython",
]

[project.optional-dependencies]
# Qlib AI 选股依赖（可选）
qlib = [
    "pyqlib>=0.9.0",
    "lightgbm>=4.0.0",
]

# Qlib 深度学习扩展（可选）
qlib-dl = [
    "agomsaaf[qlib]",
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
]

# 开发工具
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio>=0.21",
    "pytest-xdist>=3.5",
    "factory-boy>=3.3",
    "faker>=20.0",
    "black",
    "isort",
    "ruff",
    "mypy",
    "ipython",
    "ipdb",
]

# 完整开发环境（包含 Qlib）
all = [
    "agomsaaf[dev,qlib]",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = [
    "tushare.*",
    "akshare.*",
    "celery.*",
    "rest_framework.*",
    "drf_spectacular.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.development"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]
addopts = [
    "-v",
    "--tb=short",
    "--cov=apps",
    "--cov-report=term-missing",
    "--cov-report=html",
]
