[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agomsaaf-sdk"
version = "1.0.0"
description = "Python SDK and MCP Server for AgomSAAF - Macro Environment Admission System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "AgomSAAF Team" }
]
keywords = ["finance", "investment", "macro", "regime", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    "mcp>=1.20,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.31.0",
]
pandas = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
agomsaaf-mcp = "agomsaaf_mcp.server:main"

[project.urls]
Homepage = "https://github.com/agomsaaf/agomsaaf"
Documentation = "https://docs.agomsaaf.com"
Repository = "https://github.com/agomsaaf/agomsaaf"

[tool.hatch.build.targets.wheel]
packages = ["agomsaaf", "agomsaaf_mcp"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = ["py311"]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "mcp: MCP server tests",
]
